objects/Account_Extension__c.object
<CustomObject>
    <fields>
        <fullName>Duns_Number__c</fullName>
        <description>Duns Number from Data Warehousing</description>
        <label>Duns Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Disposition__c</fullName>
        <description>Will be required for field to disposition in order to bypass DupeBlocker rules.</description>
        <label>Duplicate Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Restrictions</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Copy Print</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Employee Purchase (EPP)</fullName>
                </value>
                <value>
                    <fullName>Export Account</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Internal Programs (Corp Use)</fullName>
                </value>
                <value>
                    <fullName>Managed Print Services</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>SPC Purchases</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>I Don&apos;t Own Existing Prospect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN #</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Spend_CAD__c</fullName>
        <description>For Canadian Currency</description>
        <label>Account Potential (CAD)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Spend__c</fullName>
        <description>Estimated Annual Spend with OD</description>
        <label>Account Potential</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_OMax_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing OMax Account</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Account Extensions (Existing OMax Account)</relationshipLabel>
        <relationshipName>omaxaccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extended_Zip_Code__c</fullName>
        <label>Extended Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extension Account</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipName>Account_Dormants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failed_Reason__c</fullName>
        <label>Failed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_IMU_LY__c</fullName>
        <label>Filing &amp; Binding IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_IMU_TY__c</fullName>
        <label>Filing &amp; Binding IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_LY__c</fullName>
        <description>Binders Sales Last Year</description>
        <inlineHelpText>Binders Sales Last Year</inlineHelpText>
        <label>Filing &amp; Binding LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Last_Order__c</fullName>
        <label>Filing &amp; Binding Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Last_Order_amt__c</fullName>
        <label>Filing &amp; Binding Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Pot__c</fullName>
        <description>Binders Potential</description>
        <inlineHelpText>Binders Potential</inlineHelpText>
        <label>Filing &amp; Binding Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_TY__c</fullName>
        <description>Binders Sales This Year</description>
        <inlineHelpText>Binders Sales This Year</inlineHelpText>
        <label>Filing &amp; Binding TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Total_LY__c</fullName>
        <label>Filing &amp; Binding Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Order_Date__c</fullName>
        <label>First Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Note__c</fullName>
        <label>Follow Up Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Charge__c</fullName>
        <label>Freight Charge</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Surcharge__c</fullName>
        <label>Pays Fuel Surcharge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furniture_IMU_LY__c</fullName>
        <label>Furniture IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_IMU_TY__c</fullName>
        <label>Furniture IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_LY__c</fullName>
        <description>Furniture Sales Last Year</description>
        <inlineHelpText>Furniture Sales Last Year</inlineHelpText>
        <label>Furniture LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Last_Order__c</fullName>
        <label>Furniture Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Furniture_Pot__c</fullName>
        <description>Furniture Potential</description>
        <inlineHelpText>Furniture Potential</inlineHelpText>
        <label>Furniture Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_TY__c</fullName>
        <description>Furniture Sales this Year</description>
        <inlineHelpText>Furniture Sales this Year</inlineHelpText>
        <label>Furniture TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Total_LY__c</fullName>
        <label>Furniture Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_last_order_amt__c</fullName>
        <label>Furniture Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GGPId__c</fullName>
        <label>GGPId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Id__c</fullName>
        <label>GP Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GParent_GPID__c</fullName>
        <label>GParent GPID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GT_Account_Type__c</fullName>
        <label>GT Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOLDTO</fullName>
                </value>
                <value>
                    <fullName>CONTROL</fullName>
                </value>
                <value>
                    <fullName>SHIPTO</fullName>
                </value>
                <value>
                    <fullName>ENTITY</fullName>
                </value>
                <value>
                    <fullName>MASTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GT_Description__c</fullName>
        <description>Created for Story #S-357921</description>
        <label>GT Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GT_Max_Perks_Eligible__c</fullName>
        <label>GT Max Perks Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GT_Max_Perks_Enrolled_Date__c</fullName>
        <label>GT Max Perks Enrolled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GT_Max_Perks_Enrolled__c</fullName>
        <label>GT Max Perks Enrolled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GT_Segment__c</fullName>
        <label>GT Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Micro &lt;$2,500</fullName>
                </value>
                <value>
                    <fullName>Micro $2,500-$5,000</fullName>
                </value>
                <value>
                    <fullName>Micro $5,000-$10,000</fullName>
                </value>
                <value>
                    <fullName>SMB $10,000-$30,000</fullName>
                </value>
                <value>
                    <fullName>SMB $30,000-$75,000</fullName>
                </value>
                <value>
                    <fullName>SMB $75,000-$150,000</fullName>
                </value>
                <value>
                    <fullName>SMB $150,000-$250,000</fullName>
                </value>
                <value>
                    <fullName>Large $250,000-$1M</fullName>
                </value>
                <value>
                    <fullName>Enterprise $1M-$2.5M</fullName>
                </value>
                <value>
                    <fullName>Enterprise $2.5M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grand_Siloe__c</fullName>
        <label>Grand Silo</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_Type__c</fullName>
        <label>Great Grandparent Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Groups - Field</fullName>
                </value>
                <value>
                    <fullName>Buying Groups - Global</fullName>
                </value>
                <value>
                    <fullName>Buying Groups - Non Profit</fullName>
                </value>
                <value>
                    <fullName>EPP Program</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Global Opportunity</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Field</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Global</fullName>
                </value>
                <value>
                    <fullName>MPS</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Public - Coop</fullName>
                </value>
                <value>
                    <fullName>Pricing Group - Field</fullName>
                </value>
                <value>
                    <fullName>Pricing Group - Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandparent__c</fullName>
        <formula>IF(LEN(AOPS_Cust_Id__c) &lt;6 &amp;&amp; LEN(AOPS_Cust_Id__c)&gt;0, &quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Record_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header Record Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosted_Catalog_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hosted Catalog Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Dormants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_OD_SIC_DB__c</fullName>
        <description>DataWareHouse Provided Attribute,  
Populated as Part of enrichment (Integration) b/w SFDC and Data Warehouse</description>
        <label>Industry (OD SIC) - D&amp;B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_OD_SIC_Rep__c</fullName>
        <description>Industry - REP Provided</description>
        <label>Industry - Rep</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Construction/Contractors</fullName>
                </value>
                <value>
                    <fullName>Education/Schools</fullName>
                </value>
                <value>
                    <fullName>Engineering/Architecture/Consulting</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Printing</fullName>
                </value>
                <value>
                    <fullName>Medical/Health Services</fullName>
                </value>
                <value>
                    <fullName>Membership/Organizations</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail/Restaurants</fullName>
                </value>
                <value>
                    <fullName>Social Services</fullName>
                </value>
                <value>
                    <fullName>Transportation/Communications/Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Construction/Contractors</fullName>
                </value>
                <value>
                    <fullName>Education/Schools</fullName>
                </value>
                <value>
                    <fullName>Engineering/Architecture/Consulting</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manufacturing/Printing</fullName>
                </value>
                <value>
                    <fullName>Medical/Health Services</fullName>
                </value>
                <value>
                    <fullName>Membership/Organizations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail/Restaurants</fullName>
                </value>
                <value>
                    <fullName>Social Services</fullName>
                </value>
                <value>
                    <fullName>Transportation/Communications/Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Site_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is a system flag used by trigger on initial prospect creation.  Prevents trigger from firing twice.</description>
        <label>Initial Site Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_IMU_LY__c</fullName>
        <label>Ink Toner IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_IMU_TY__c</fullName>
        <label>Ink Toner IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_LY__c</fullName>
        <description>Ink Toner - Sales Last Year</description>
        <inlineHelpText>Ink Toner - Sales Last Year</inlineHelpText>
        <label>Ink Toner LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Last_Order__c</fullName>
        <label>Ink Toner Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Last_Order_amt__c</fullName>
        <label>Ink Toner Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Pot__c</fullName>
        <description>Ink Toner - Potential</description>
        <inlineHelpText>Ink Toner - Potential</inlineHelpText>
        <label>Ink Toner Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_TY__c</fullName>
        <description>Ink Toner Sales this Year</description>
        <inlineHelpText>Ink Toner Sales this Year</inlineHelpText>
        <label>Ink Toner TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ink_Toner_Total_LY__c</fullName>
        <label>Ink Toner Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_IMU_LY__c</fullName>
        <label>Labels &amp; Forms IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_IMU_TY__c</fullName>
        <label>Labels &amp; Forms IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_LY__c</fullName>
        <description>Labels Sales Last Year</description>
        <inlineHelpText>Labels Sales Last Year</inlineHelpText>
        <label>Labels &amp; Forms LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Last_Order__c</fullName>
        <label>Labels &amp; Forms Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Last_Order_amt__c</fullName>
        <label>Labels &amp; Forms Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Pot__c</fullName>
        <description>Labels Potential</description>
        <inlineHelpText>Labels Potential</inlineHelpText>
        <label>Labels &amp; Forms Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_TY__c</fullName>
        <description>Labels Sales this Year</description>
        <label>Labels &amp; Forms TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labels_Forms_Total_LY__c</fullName>
        <label>Labels &amp; Forms Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date__c</fullName>
        <label>Last Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedBy__c</fullName>
        <label>Legacy CreatedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedDate__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedBy__c</fullName>
        <label>Legacy LastModifiedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedDate__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Flag__c</fullName>
        <label>Legal Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalty_Type__c</fullName>
        <description>Loyality Program</description>
        <label>Loyalty Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Sales TAM</fullName>
                </value>
                <value>
                    <fullName>OD Rewards Platinum</fullName>
                </value>
                <value>
                    <fullName>Regular - No Loyalty Flag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPS_IMU_LY__c</fullName>
        <label>MPS IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_IMU_TY__c</fullName>
        <label>MPS IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_LY__c</fullName>
        <label>MPS LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Last_Order__c</fullName>
        <label>MPS Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPS_Last_order_amt__c</fullName>
        <label>MPS Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Pot__c</fullName>
        <label>MPS Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_TY__c</fullName>
        <label>MPS TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS_Total_LY__c</fullName>
        <label>MPS Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY_IMU__c</fullName>
        <label>MTD Sales LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_LY__c</fullName>
        <description>Current Month Sales for Last Year</description>
        <inlineHelpText>Current Month Sales for Last Year</inlineHelpText>
        <label>MTD Sales LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY_IMU__c</fullName>
        <label>MTD Sales TY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTD_Sales_TY__c</fullName>
        <description>Current Month Sales for this year</description>
        <inlineHelpText>Current Month Sales for this year</inlineHelpText>
        <label>MTD Sales TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Match_Grade__c</fullName>
        <label>Match Grade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Score__c</fullName>
        <label>Match Score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Order_Limit__c</fullName>
        <label>Max Order Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Order_Charge__c</fullName>
        <label>Pays minimum handling charge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Minimum Discount</description>
        <label>Minimum Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_IMU_LY__c</fullName>
        <label>Miscellaneous IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_IMU_TY__c</fullName>
        <label>Miscellaneous IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_LY__c</fullName>
        <description>Notes &amp; Adhesives Sales Last Year</description>
        <inlineHelpText>Notes &amp; Adhesives Sales Last Year</inlineHelpText>
        <label>Miscellaneous LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Last_Order__c</fullName>
        <label>Miscellaneous Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Last_Order_amt__c</fullName>
        <label>Miscellaneous Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Pot__c</fullName>
        <description>Notes &amp; Adhesives Potential</description>
        <inlineHelpText>Notes &amp; Adhesives Potential</inlineHelpText>
        <label>Miscellaneous Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_TY__c</fullName>
        <description>Notes Adhesive Sales this Year</description>
        <inlineHelpText>Notes Adhesive Sales this Year</inlineHelpText>
        <label>Miscellaneous TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Total_LY__c</fullName>
        <label>Miscellaneous Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mod_5_EBS_Sync_Error__c</fullName>
        <label>Mod 5 EBS Sync Error</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mod_5_EBS_Sync_Status__c</fullName>
        <description>This flag is to confirm that Delink Process Completed in EBS</description>
        <label>Mod 5 EBS Sync Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Price_Value__c</fullName>
        <label>Modified Price Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_LY_IMU__c</fullName>
        <label>Monthly LY IMU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_LY__c</fullName>
        <label>Monthly LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_DW__c</fullName>
        <description>Name formatted for DW</description>
        <formula>SUBSTITUTE(IF(Grandparent__c=&apos;Yes&apos;,Name,Account_Name__c),&quot;\&quot;&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name DW</label>
        <type>Text</type>
    </fields>
</CustomObject>